Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109164

[REG 6.2.5 -> 6.4.0] qmlcachegen crash when attempting a 'Copy sequence'

XMLWordPrintable

    • Linux/X11, Windows
    • aa4a1e96b (dev)

      Hello,

      I have attempted to replicate on of the examples from the following documentation which talks about Sequence tips (https://doc.qt.io/qt-6/qtquick-performance.html).

      In the documentation there is an example of how to speed up writing to a sequence property by doing a copy sequence. I was able to replicate this code which I have attached below.

      This works as intended in Qt 6.2.3, however when attempting to build this example with Qt 6.4.0 I get the error ":-1: error: ninja: build stopped: subcommand failed."

      This error appears to be caused by the line "mySequence.qrealListProperty = someData;" (line 89 of main.qml in the attached example). It is unclear to me why this is happening and I believe it to be a bug as the code is nearly identical to the code from the documentation and works perfectly in previous version of Qt.

        For Gerrit Dashboard: QTBUG-109164
        # Subject Branch Project Status CR V

            fabiankosmale Fabian Kosmale
            benjamin.hadra Benjamin Hadra
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes